syntax = "proto3";

package file;

option go_package = "fileChunkProto/";

service File {
    rpc Download(DownloadMessage) returns (stream FileMessage) {};
    rpc Upload(stream FileMessage) returns (stream UploadMessage) {};
}

message DownloadMessage {
    bytes hash_key = 1;
}

message UploadMessage {
    int64 lines = 1;
}

message FileMessage {
    bytes hash_key = 1;
    bytes data     = 2;
}
